--- a/sections/beta.html
+++ b/sections/beta.html
@@ -1,64 +1,115 @@
 <div id="beta" class="section">
-    <h3>Beta-Alanin</h3>
-    <input type="number" id="b_kilo" placeholder="Kilonuz (kg)" onkeyup="if(event.keyCode === 13) hesaplaBeta()" />
-    <span id="b_kilo_warning" class="input-warning"></span>
-    <button onclick="hesaplaBeta()">Hesapla</button>
-    <div id="betaSonuc" class="result"></div>
-    <div class="supplement-section-info">
-      <h5>Beta-Alanin Hakkında Bilgi:</h5>
-      <div class="not-metin">
-        <strong>Ne işe yarar:</strong> Kaslardaki karnozin seviyelerini artırarak laktik asit birikimini geciktirir. Bu, orta ve yüksek yoğunluklu egzersizlerde (60-240 saniye) yorgunluğun gecikmesine ve performans artışına yardımcı olur.
-        <br><strong>Nasıl kullanılır:</strong> Günlük dozu gün içinde istediğin zaman içebilir ve gün içinde bölünebilir. Dinlenme günlerinde de alınmaya devam edilmelidir.
-        <br><strong>Etkisi ne zaman görülür:</strong> Beta-alanin takviyesiyle performans artışı genellikle 3–4 hafta içinde hissedilmeye başlar. Bu süreçte kas karnozin seviyesi yaklaşık %30–40 artar. Düzenli kullanım sürdükçe bu birikim 6–8. haftada %60’a, 10–12. haftada ise %80’e kadar ulaşabilir. Maksimum fayda için en az 8–12 haftalık kullanım önerilir.
-      </div>
+  <h3>Beta-Alanin</h3>
 
-      <h5>Sıkça Sorulan Sorular:</h5>
-      <div class="not-metin">
-        <strong>Ciltteki karıncalanma hissi (parestezi) nedir?</strong><br>
-        Bu durum tamamen zararsız ve yaygındır. Beta-alanin, sinir hücreleri üzerindeki reseptörleri aktive ederek bu hissi yaratır. Bu, ürünün etkisinin başladığı anlamına gelmez, sadece yüksek doz alımının bir sonucudur. Dozu gün içine yayarak veya yemekle birlikte alarak bu hissi azaltabilirsin.
-        <br><br>
-        <strong>Dinlenme günlerinde de alınmalı mı?</strong><br>
-        Evet, kas karnozin depolarını doldurmak için düzenli kullanım önemlidir. Bu nedenle, dinlenme günlerinde de almaya devam etmelisin.
-        <br><br>
-        <strong>Bıraktıktan ne kadar süre sonra etkisi kaybolur ?</strong><br>
-        Supplementasyon durduktan 4-6 hafta sonra etkisi başlangıç seviyesine dönmeye başlar.
-      </div>
+  <input type="number" id="b_kilo" placeholder="Kilonuz (kg)" onkeyup="if(event.keyCode === 13) hesaplaBeta()" />
+  <span id="b_kilo_warning" class="input-warning"></span>
+  <button onclick="hesaplaBeta()">Hesapla</button>
+  <div id="betaSonuc" class="result"></div>
 
-      <div class="doz-bilgisi">
-        <h6>Doz Aşımı (Hafifçe Yüksek Alım):</h6>
-        <ul class="not-maddeler">
-          <li><span class="turuncu">Olası Olumsuz Etkileri:</span>
-            <ul>
-              <li>Parestezi (ciltte zararsız karıncalanma hissi) şiddetlenebilir.</li>
-              <li>Nadir durumlarda mide rahatsızlığı veya ishal.</li>
-            </ul>
-          </li>
-          <li><span class="yesil">Olası Olumlu Etkileri:</span>
-            <ul>
-              <li>Kas karnozin depolarının daha hızlı dolması potansiyeli.</li>
-              <li>Bazı kullanıcılar için parestezi hissi motivasyon kaynağı olabilir.</li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <div class="doz-bilgisi danger">
-        <h6>Aşırı Doz Aşımı (Çok Yüksek ve Uzun Süreli Alım):</h6>
-        <ul class="not-maddeler">
-          <li>Günlük 10 gram üzeri ve uzun süreli kullanım:
-            <ul>
-              <li><span class="kirmizi">Olumsuz Etkileri:</span>
-                  <ul>
-                      <li>Şiddetli ve rahatsız edici parestezi.</li>
-                      <li>Ciddi mide rahatsızlığı, mide krampı, ishal.</li>
-                      <li>Çok nadiren, diğer organlar üzerinde potansiyel olumsuz etkiler.</li>
-                  </ul>
-              </li>
-            </ul>
-          </li>
-        </ul>
+  <div class="supplement-section-info">
+
+    <!-- Bilgilendirme (Sadeleştirilmiş) -->
+    <div class="info-section">
+      <h5 class="info-header">Beta-Alanin Hakkında Bilgi:</h5>
+      <div class="not-metin">
+        <strong>Ne işe yarar:</strong> Laktik asiti tamponlayarak egzersiz yorgunluğunu geciktirir ve performansı artırır.<br>
+        <strong>Nasıl kullanılır:</strong> Genelde günün herhangi bir saatinde 3–6 gram arası alarak kullanılır.<br>
+        <strong>Etkisi ne zaman görülür:</strong> 3–4 hafta içinde hissedilmeye başlar.
       </div>
     </div>
-    <div class="disclaimer">
-      Uyarı: Bu hesaplayıcıdaki bilgiler genel rehber niteliğindedir ve tıbbi tavsiye yerine geçmez. Sağlık durumunuz veya supplement kullanımı hakkında karar vermeden önce daima bir sağlık profesyoneline danışın.
+
+    <!-- SSS -->
+    <div class="faq-section">
+      <h5 class="faq-header">Sıkça Sorulan Sorular:</h5>
+      <div class="accordion-container">
+
+        <!-- 1. Sağlığa zararlı mı? -->
+        <div class="accordion-item">
+          <button class="accordion-header">Beta-alanin sağlığa zararlı mı?</button>
+          <div class="accordion-content">
+            <div class="not-metin">
+              <ul>
+                <li>Genellikle günlük önerilen dozda (3–6 g) kısa ve uzun vadede herhangi bir zarar vermez.</li>
+                <li>Yüksek dozlarda mide rahatsızlığı veya ishal görülebilir.</li>
+                <li>Böbrek veya karaciğer sorunu olanlar için doktor kontrolü önerilir.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- 2. Karıncalanma hissi normal mi? -->
+        <div class="accordion-item">
+          <button class="accordion-header">Karıncalanma hissi (parestezi) normal mi?</button>
+          <div class="accordion-content">
+            <div class="not-metin">
+              <ul>
+                <li>Beta-alanin alımından sonra ciltte karıncalanma sık görülen ve zararsız bir etkidir.</li>
+                <li>Bu his, ürünün etkisinin başladığı anlamına gelmez.</li>
+                <li>Dozu gün içine yaymak veya yemekle birlikte almak bu hissi azaltabilir.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- 3. Kas karnozini nedir, depolanma süreci nasıldır? -->
+        <div class="accordion-item">
+          <button class="accordion-header">Kas karnozini nedir, depolanma süreci nasıldır?</button>
+          <div class="accordion-content">
+            <div class="not-metin">
+              <ul>
+                <li>Karnozin, kaslarda laktik asidi tamponlayarak yorgunluğu azaltan bir proteindir.</li>
+                <li>Beta-alanin kullanımıyla karnozin seviyesi 3–4 hafta içinde yükselmeye başlar.</li>
+                <li>6–8 haftada %40–60 artış, 10–12 haftada %80’e kadar dolum gerçekleşir.</li>
+                <li>Kullanım bırakıldığında 4–6 hafta içinde düşmeye başlar, 8–12 haftada başlangıç seviyesine döner.</li>
+                <li>Dinlenme günlerinde de alınması, karnozin seviyesinin korunması için önemlidir.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
+
+    <!-- Doz Bilgisi -->
+    <div class="doz-bilgisi">
+      <h6>Doz Aşımı (Hafifçe Yüksek Alım):</h6>
+      <ul class="not-maddeler">
+        <li><span class="turuncu">Olası Olumsuz Etkileri:</span>
+          <ul>
+            <li>Parestezi (ciltte zararsız karıncalanma hissi) şiddetlenebilir.</li>
+            <li>Nadir durumlarda mide rahatsızlığı veya ishal.</li>
+          </ul>
+        </li>
+        <li><span class="yesil">Olası Olumlu Etkileri:</span>
+          <ul>
+            <li>Kas karnozin depolarının daha hızlı dolması potansiyeli.</li>
+            <li>Bazı kullanıcılar için parestezi hissi motivasyon kaynağı olabilir.</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+    <div class="doz-bilgisi danger">
+      <h6>Aşırı Doz Aşımı (Çok Yüksek ve Uzun Süreli Alım):</h6>
+      <ul class="not-maddeler">
+        <li><strong>Günlük 10 gram üzeri ve uzun süreli kullanım:</strong>
+          <ul>
+            <li><span class="kirmizi">Olumsuz Etkileri:</span>
+              <ul>
+                <li>Şiddetli ve rahatsız edici parestezi.</li>
+                <li>Ciddi mide rahatsızlığı, mide krampı, ishal.</li>
+                <li>Çok nadiren, diğer organlar üzerinde potansiyel olumsuz etkiler.</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
   </div>
+
+  <!-- Uyarı -->
+  <div class="disclaimer">
+    Uyarı: Bu hesaplayıcıdaki bilgiler genel rehber niteliğindedir ve tıbbi tavsiye yerine geçmez. Sağlık durumunuz veya supplement kullanımı hakkında karar vermeden önce daima bir sağlık profesyoneline danışın.
+  </div>
+</div>
